# harness-experiment

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  harness.py  pyproject.toml
docs/: architecture.md
src/harness/: __init__.py  __main__.py  cli.py  config.py  logging.py  orchestrator.py  prompts.py
src/harness/domain/: models.py
src/harness/infrastructure/: agent_stream.py  atlassian.py  cursor_agent.py  git.py  github.py  shell.py  state_store.py
src/harness/services/: ask.py  code_qa.py  code_qa_phase.py  implementer.py  planner.py  pr.py  review_phase.py  reviewer.py  slug.py  status_trailer.py  workspace.py
tests/: test_agent_stream.py  test_ask.py  test_atlassian.py  test_code_qa.py  test_code_qa_phase.py  test_reviewer.py  test_slug.py  test_state.py  test_status_trailer.py
