[project]
name = "harness"
version = "0.2.0"
description = "Minimal AI coding harness built on top of the Cursor CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15,<0.16",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<0.7",
    "pre-commit>=3.7,<4",
]

[project.scripts]
harness = "harness.cli:app"

[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
# Typer uses function calls (typer.Option, typer.Argument) as parameter
# defaults by design; B008 doesn't apply.
"src/harness/cli.py" = ["B008"]

